name:                network-uri
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Alex Sayers
maintainer:          alex.sayers@gmail.com
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Network.Uri
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8
                     , text >=1.1 && <1.2
                     , attoparsec >=0.12 && <0.13
                     , http-types >=0.8.3 && <0.9
  hs-source-dirs:      src
  default-language:    Haskell2010
